--- a/src/app/item-card/item-card.component.html
+++ b/src/app/item-card/item-card.component.html
@@ -1,15 +1,11 @@
 <md-card class="item-card">
-    <md-card-header>
-        <md-card-title>
-            <div class="mat-headline">{{item.name}}</div>
-        </md-card-title>
-    </md-card-header>
-    <md-card-content>
-        <md-icon>euro_symbol</md-icon><span class="item-price">{{item.price}}</span>
-    </md-card-content>
-    <md-card-actions>
-        <div fxLayout="row" fxLayoutAlign="end">
-            <button md-button><md-icon>delete</md-icon></button>
+    <div class="mat-headline">{{item.name}}</div>
+    <div fxLayout="row" fxLayoutAlign="space-between center" style="width: 100%">
+        <div flex="0 0 50">
+            <span><md-icon>euro_symbol</md-icon></span><span class="item-price">{{item.getFormattedPrice()}}</span>
         </div>
-    </md-card-actions>
+        <div flex="0 0 50">
+            <button md-button (click)="onDeleteButtonClicked()"><md-icon>delete</md-icon></button>
+        </div>
+    </div>
 </md-card>
