First working app

--- a/src/app/item-card/item-card.component.css
+++ b/src/app/item-card/item-card.component.css
@@ -1,7 +1,31 @@
 .item-card {
     margin-top: 10px;
     height: 100px;
+    padding-top: 10px;
+    padding-bottom: 8px;
 }
+
+.item-name{
+    margin-left: 15px;
+}
+
 .item-price {
     font-size: 2.5em;
+}
+
+.delete-item-button {
+    min-width: 0px; 
+    line-height: 0px;  
+    border-radius: 0px; 
+}
+
+.edit-item-button {
+    min-width: 0px; 
+    line-height: 0px; 
+    padding: 0px;  
+    border-radius: 0px; 
+}
+
+.item-collected {
+    background-color: palegreen;
 }
