--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,9 @@
-.toolbarContainer {
-
-}
-
 .contentContainer{
     width: 90%;
     margin: 0 auto;
+}
+
+.total-icon {
+    position: relative;
+    top: 4px;
 }
