--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div class="toolbarContainer">
+<div>
     <md-toolbar color="primary">
-        <div fxLayout="row" style="width:100%;">
-            <div fxFlex>Shopping List</div>
-            <div fxLayout="row" fxLayoutAlign="end">
-                {{toolbarTotal}}                
+        <div fxLayout="row" style="width:100%;" fxLayoutAlign="space-between stretch">
+            <div fxFlex="0 0 10%">App List</div>
+            <div fxFlex="0 0 4%" fxFlex.xs="0 0 20%">
+                <md-icon class="total-icon">euro_symbol</md-icon><span>{{toolbarTotal}}</span>    
             </div>
         </div>
     </md-toolbar>
