--- a/src/app/item-card-list/item-card-list.component.html
+++ b/src/app/item-card-list/item-card-list.component.html
@@ -1,6 +1,6 @@
-<div fxLayout="row" fxLayoutWrap fxLayoutGap="5px" fxLayoutAlign="space-between center">
-    <div fxFlex="0 0 49%" fxFlex.xs="0 0 100%" *ngFor="let item of items; let i = index">
-         <app-item-card [item]="item" (itemDeletedEmitter)="removeItem($event)"></app-item-card>
+<div fxLayout="row" fxLayoutWrap fxLayoutGap="5px" fxLayoutAlign="start center" style="margin-bottom: 100px;">
+    <div fxFlex="0 0 33%" fxFlex.xs="0 0 100%" *ngFor="let item of items; let i = index">
+         <app-item-card [item]="item" (itemDeletedEmitter)="removeItem($event)" (itemCollectedEmitter)="doTotals()" (itemEditedEmitter)="doTotals()"></app-item-card>
     </div>
 </div>
 
