--- a/src/app/item-card/item-card.component.html
+++ b/src/app/item-card/item-card.component.html
@@ -1,11 +1,17 @@
-<md-card class="item-card">
-    <div class="mat-headline">{{item.name}}</div>
+<md-card class="item-card" [ngClass]="{'item-collected': item.collected===true}">
     <div fxLayout="row" fxLayoutAlign="space-between center" style="width: 100%">
-        <div flex="0 0 50">
-            <span><md-icon>euro_symbol</md-icon></span><span class="item-price">{{item.getFormattedPrice()}}</span>
+        <div flex="0 0 50%" class="mat-headline item-name">{{item.name}}</div>
+        <div flex="0 0 50%" style="margin-right: -.5em;">
+            <md-slide-toggle color="primary" class="mat-headline" (change)="doToggleChecked()"></md-slide-toggle>
         </div>
-        <div flex="0 0 50">
-            <button md-button (click)="onDeleteButtonClicked()"><md-icon>delete</md-icon></button>
+    </div>
+    <div fxLayout="row" fxLayoutAlign="space-between center" style="width: 100%">
+        <div flex="0 0 50%">
+            <span class="item-price">{{item.getFormattedPrice()}}</span>
+        </div>
+        <div flex="0 0 50%">
+            <button md-button class="delete-item-button" (click)="onDeleteButtonClicked()"><md-icon>delete</md-icon></button>
+            <button md-button class="edit-item-button" (click)="onEditButtonClicked()"><md-icon>edit</md-icon></button>
         </div>
     </div>
 </md-card>
