Added local storage of items on app close / start

--- a/src/app/item-card/item-card.component.html
+++ b/src/app/item-card/item-card.component.html
@@ -7,7 +7,7 @@
     </div>
     <div fxLayout="row" fxLayoutAlign="space-between center" style="width: 100%">
         <div flex="0 0 50%">
-            <span class="item-price">{{item.getFormattedPrice()}}</span>
+            <span class="item-price">{{item.price}}</span>
         </div>
         <div flex="0 0 50%">
             <button md-button class="delete-item-button" (click)="onDeleteButtonClicked()"><md-icon>delete</md-icon></button>
