--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,13 @@
-/* You can add global styles to this file, and also import other style files
+/* Other material themes
 @import '~@angular/material/prebuilt-themes/purple-green.css';
 @import '~@angular/material/prebuilt-themes/pink-bluegrey.css';
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 */
 
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500');
+
 html,body{
     width: 100%;
     height: 100%;
