Changed title, totalled items on init

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div>
     <md-toolbar color="primary">
         <div fxLayout="row" style="width:100%;" fxLayoutAlign="space-between stretch">
-            <div fxFlex="0 0 10%">Lister</div>
+            <div fxFlex="0 0 10%">Budget List</div>
             <div fxFlex="0 0 4%" fxFlex.xs="0 0 20%">
                 <md-icon class="total-icon">euro_symbol</md-icon><span>{{toolbarTotal}}</span>    
             </div>
