--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<div>
+<div class="toolbarDiv">
     <md-toolbar color="primary">
         <div fxLayout="row" style="width:100%;" fxLayoutAlign="space-between stretch">
             <div fxFlex="0 0 10%">Budget List</div>
-            <div fxFlex="0 0 4%" fxFlex.xs="0 0 20%">
+            <div fxFlex="0 0 6%" fxFlex.xs="0 0 20%">
                 <md-icon class="total-icon">euro_symbol</md-icon><span>{{toolbarTotal}}</span>    
             </div>
         </div>
